--- a/index.html
+++ b/index.html
@@ -4,8 +4,105 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400;500;600;700&family=Open+Sans:wght@300;400;500;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./style/style.css" />
-    <title>Document</title>
+    <title>Practice-Site</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="#"><img class="header-img" src="./img/logo.png" alt="logo" /></a>
+
+      <section class="login">
+        <a href="#">Login</a> | <a href="#">Register</a>
+      </section>
+    </header>
+
+    <nav class="sticky">
+      <a href="#">Home</a>
+      <a href="#">Courses</a>
+      <a href="#">Prices</a>
+      <a href="#">Contact</a>
+    </nav>
+
+    <nav class="banner-img">
+      <img src="./img/banner.jpg" alt="banner-img" />
+
+      <section class="text">
+        <h2>Hello, There!</h2>
+        <h3>Your freelancer is here</h3>
+        <button>Get Detail</button>
+      </section>
+    </nav>
+
+    <main>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+        provident qui quasi ut consequatur itaque, consequuntur asperiores,
+        neque quo temporibus distinctio saepe esse a. Nihil magnam blanditiis
+        totam harum libero alias natus dolorum distinctio magni. Dolores
+        laboriosam tempora fugiat libero iste iure porro consequuntur amet
+        facilis incidunt? Consectetur, placeat sit?
+      </p>
+      <br />
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+        libero repellat doloribus delectus vel quod tenetur, voluptatem
+        consequatur similique aliquid voluptas quas culpa cum molestiae maiores
+        at. Error expedita consequatur earum quam! Natus sequi quo accusantium
+        porro esse fugiat culpa ullam nostrum ut aperiam quas, distinctio ipsam
+        repellat nulla aliquam mollitia similique earum. Velit exercitationem,
+        assumenda quos ut ab unde repudiandae, esse et expedita pariatur eius
+        voluptatibus cupiditate at? Mollitia laudantium ex tempora saepe, minus
+        nam. Hic culpa vel consequatur illo impedit magni, porro alias libero
+        asperiores modi nobis voluptatibus, expedita neque. Minus molestiae quae
+        cupiditate numquam tempora pariatur ipsam.
+      </p>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit,
+        eos consequatur inventore porro, ex sapiente eius at illum voluptatibus
+        quis et ut. A iure praesentium quis dignissimos repudiandae in. Ipsum
+        labore incidunt tenetur mollitia, aspernatur cupiditate nisi perferendis
+        quas dolorem ipsa architecto obcaecati dolore blanditiis quis, explicabo
+        libero assumenda esse earum placeat nobis vitae, ipsam possimus.
+        Incidunt, praesentium earum molestiae laboriosam nemo nihil nisi ut
+        pariatur cupiditate similique rerum vitae?
+      </p>
+
+      <br />
+
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto,
+        facere accusamus cum laudantium quas explicabo error exercitationem
+        suscipit possimus numquam corporis impedit libero iste quaerat ducimus
+        dicta quasi blanditiis animi obcaecati adipisci, temporibus tempora
+        cupiditate! Numquam, quidem. Nostrum, totam temporibus. Hic quibusdam
+        quae dolorum culpa deleniti molestiae quos velit praesentium, impedit
+        modi ad natus eum excepturi odio porro incidunt distinctio ab voluptates
+        earum consequuntur. Nobis deleniti velit placeat recusandae ducimus hic
+        in odio praesentium qui at maiores, magnam veritatis aspernatur magni,
+        nam reiciendis tempora adipisci culpa. Exercitationem, porro
+        praesentium, repellendus nulla perferendis illo voluptatum alias
+        doloribus dolore fugit culpa rerum!
+      </p>
+    </main>
+
+    <section class="icon">
+      <i class="fa-brands fa-slack"></i>
+    </section>
+  </body>
 </html>
